Sat Mar 18 12:34:02 EST 2006	JK Lowden <jklowden@schemamania.org>
	* include/dblib.h src/dblib/bcp.c
	- validate parameters.  Unable to run unittest due to down server.

Sat Mar 18 01:27:32 EST 2006	JK Lowden <jklowden@schemamania.org>
	* include/dblib.h src/dblib/dblib.c src/dblib/rpc.c
	- test parameters for all public functions (except bcp)
	
Fri Mar 17 01:35:17 EST 2006	JK Lowden <jklowden@schemamania.org>
	* src/dblib/dblib.c src/dblib/rpc.c
	- added a TDSDUMP log entry for every public function
	
Thu Mar 16 09:59:25 EST 2006	JK Lowden <jklowden@schemamania.org>
	* TODO add rcp error messages
	* src/apps/bsqldb.c exit if severity > 10

Wed Mar 15 00:41:11 EST 2006	JK Lowden <jklowden@schemamania.org>
	* doc/freebcp.txt The freebcp manpage was seriously out of date.
	* src/apps/freebcp.c give better error message.

Thu Mar  9 14:33:37 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
	* include/tdsodbc.h src/odbc/odbc.c:
	- add cursor_type to connection attributes (required for DBD::ODBC)
	- removed small TODO on error report

Mon Mar  6 12:55:10 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
	* include/tds.h src/ctlib/ct.c src/odbc/connectparams.c:
	* src/pool/util.c src/server/login.c src/server/unittest.c:
	* src/tds/config.c src/tds/login.c src/tds/mem.c:
	- renamed host_name field to client_host_name
	- optimize way strings are allocated

Fri Feb 24 15:04:35 EST 2006	JK Lowden <jklowden@schemamania.org>
	* src/tds/config.c src/tds/login.c:
	- nicer TDSDUMPCONFIG output, including a recap

Sun Feb 19 14:56:15 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
	* src/odbc/odbc.c: fix wrong declaration

Thu Feb 16 08:30:00 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
	* src/odbc/unittests/scroll.c src/odbc/unittests/raiserror.c:
	* src/odbc/unittests/cursor1.c:
	- remove warning compiling with gcc4
	* misc/test-other.sh: fix problem with DBD:ODBC test

Mon Feb 13 17:11:30 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>